Finalizando coleçoes em python e iniciando funções

--- a/Secao 6 Coleções python/colecao_python.ipynb
+++ b/Secao 6 Coleções python/colecao_python.ipynb
@@ -2042,11 +2042,158 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## 34 Mapas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Também conhecidos como dicionários\n",
+    "\n",
+    "Dicionarios em python são representados por chaves {}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "jan\n",
+      "fev\n",
+      "mar\n",
+      "100\n",
+      "120\n",
+      "300\n",
+      "Em jan eu recebi 100\n",
+      "Em fev eu recebi 120\n",
+      "Em mar eu recebi 300\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Interando sobre dicionários \n",
+    "receita = {'jan': 100, 'fev': 120, 'mar': 300}\n",
+    "\n",
+    "for chave in receita:\n",
+    "    print(chave)\n",
+    "\n",
+    "for chave in receita:\n",
+    "    print(receita[chave])\n",
+    "\n",
+    "for chave in receita:\n",
+    "    print(f'Em {chave} eu recebi {receita[chave]}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['jan', 'fev', 'mar'])\n",
+      "100\n",
+      "120\n",
+      "300\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Acessando chaves\n",
+    "print(receita.keys()) # Será retornado um dicionário de chaves\n",
+    "\n",
+    "for chave in receita.keys():\n",
+    "    print(receita[chave])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_values([100, 120, 300])\n",
+      "100\n",
+      "120\n",
+      "300\n",
+      "{'jan': 100, 'fev': 120, 'mar': 300}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Acessando valore\n",
+    "print(receita.values()) #Retorna um dicionário de valores\n",
+    "\n",
+    "for valor in receita.values():\n",
+    "    print(valor)\n",
+    "print(receita)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_items([('jan', 100), ('fev', 120), ('mar', 300)])\n",
+      "chave=jan e valor=100\n",
+      "chave=fev e valor=120\n",
+      "chave=mar e valor=300\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Desempacotamento de dicionários\n",
+    "\n",
+    "print(receita.items()) # retorna um dicionário de chave e valor \n",
+    "\n",
+    "\n",
+    "for chave, valor in receita.items():\n",
+    "    print(f'chave={chave} e valor={valor}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "520\n",
+      "300\n",
+      "100\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Soma*, Valor Máximo*, Valor Mínimo*, Tamanho\n",
+    "\n",
+    "# * Se os valores forem todos inteiros ou reais\n",
+    "\n",
+    "print(sum(receita.values()))\n",
+    "print(max(receita.values()))\n",
+    "print(min(receita.values()))\n",
+    "print(len(receita))\n"
+   ]
   }
  ],
  "metadata": {
